[tool.poetry]
name = "my_module"
version = "0.0.1"
description = "Enter project description here"
authors = ["chaitu-ycr <chaitu.ycr@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chaitu-ycr/py_proj_template.git"
repository = "https://github.com/chaitu-ycr/py_proj_template.git"
documentation = "https://chaitu-ycr.github.io/py_proj_template/"
keywords = ["python", "package", "template"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Embedded Systems"
]
packages = [
    { include = "my_module.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mkdocs = "^1.5.3"
mkdocstrings-python = {extras = ["python"], version = "^1.7.3"}
mkdocs-material = "^9.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
